--- a/todos.html
+++ b/todos.html
@@ -92,7 +92,7 @@
       <h2>No Todos</h2>
     {{else}}
       {{range .PageTodos}}
-      <div id="{{.Id}}">
+      <div>
         <p>{{.Title}}</p>
         <p>{{.Content}}</p>
       </div>
